[workspace]
members = ["shipdb-wasm"]

[package]
name = "shipdb"
version = "0.1.0"
edition = "2021"

[lib]
name = "shipdb"
path = "src/lib.rs"

[[bin]]
name = "shipdb"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "to_bincode"
path = "src/bin/to_bincode.rs"
required-features = ["cli"]

[features]
default = ["cli"]
plot = ["dep:plotters", "dep:realfft", "dep:fxhash"]
parse = ["dep:regex-lite"]
cli = ["plot", "parse", "dep:rusqlite", "dep:rayon", "dep:compact_str"]

[dependencies]
rusqlite = { version = "0.33", default-features = false, optional = true }
anyhow = "1"
plotters = { version = "0.3.7", optional = true }
smallvec = { version = "1.15.2" }
compact_str = { version = "0.9.1", optional = true }
fxhash = { version = "0.2.1", optional = true }
rayon = { version = "1", optional = true }
regex-lite = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
bincode = "1"
realfft = { version = "3.5.0", optional = true }
memchr = "2.8.3"
