[package]
name = "shipdb-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shipdb = { path = "..", default-features = false, features = ["plot", "parse"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
plotters = "0.3.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"
